libec: Add MigrateTemplateToNonceContext command
BUG=b:328734871
TEST=libec unittests

Change-Id: Ib82256224adf4d31f4c073a2e5046731fb26278f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5359074
Commit-Queue: Howard Yang <hcyang@google.com>
Reviewed-by: Patryk Duda <patrykd@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -51,6 +51,7 @@ source_set("libec_common") {
     "fingerprint/fp_frame_command.cc",
     "fingerprint/fp_get_nonce_command.cc",
     "fingerprint/fp_info_command.cc",
+    "fingerprint/fp_migrate_template_to_nonce_context_command.cc",
     "fingerprint/fp_mode.cc",
     "fingerprint/fp_mode_command.cc",
     "fingerprint/fp_pairing_key_keygen_command.cc",
@@ -166,6 +167,7 @@ install_config("install_fingerprint_headers") {
     "fingerprint/fp_frame_command.h",
     "fingerprint/fp_get_nonce_command.h",
     "fingerprint/fp_info_command.h",
+    "fingerprint/fp_migrate_template_to_nonce_context_command.h",
     "fingerprint/fp_mode.h",
     "fingerprint/fp_mode_command.h",
     "fingerprint/fp_pairing_key_keygen_command.h",
@@ -229,6 +231,7 @@ if (use.test) {
       "fingerprint/fp_frame_command_test.cc",
       "fingerprint/fp_get_nonce_command_test.cc",
       "fingerprint/fp_info_command_test.cc",
+      "fingerprint/fp_migrate_template_to_nonce_context_command_test.cc",
       "fingerprint/fp_mode_command_test.cc",
       "fingerprint/fp_mode_test.cc",
       "fingerprint/fp_pairing_key_keygen_command_test.cc",
