diagnostics: Refactor BUILD.gn under base
1. Update to use correct deps.
2. Order every build target by sources, configs and deps.

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I8d7773a7e55ccaff261cfcc35d147e274fef666e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5348636
Commit-Queue: Byron Lee <byronlee@chromium.org>
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -77,6 +77,7 @@ if (use.test) {
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/base:test",
+      "//diagnostics/base:test_support",
       "//diagnostics/cros_healthd/delegate:test",
       "//diagnostics/cros_healthd/delegate/events:test",
       "//diagnostics/cros_healthd/delegate/fetchers:test",
