--- a/diagnostics/base/BUILD.gn
+++ b/diagnostics/base/BUILD.gn
@@ -4,8 +4,10 @@
 
 group("base") {
   public_deps = [ ":libdiagnostics_base" ]
+
+  # TODO(b/328015642): Remove this public dependency.
   if (use.test || use.fuzzer) {
-    public_deps += [ ":test_util" ]
+    public_deps += [ ":test_support" ]
   }
 }
 
@@ -22,6 +24,11 @@ shared_library("libdiagnostics_base") {
     "path_literal.cc",
   ]
   public_configs = [ ":libdiagnostics_base_config" ]
+  public_pkg_deps = [
+    "libbrillo",
+    "libchrome",
+    "libmojo",
+  ]
   assert_no_deps = [
     "//diagnostics/bindings/*",
     "//diagnostics/constants/*",
@@ -30,49 +37,29 @@ shared_library("libdiagnostics_base") {
     "//diagnostics/mojom/*",
   ]
   install_path = "lib"
-  pkg_deps = [
-    "libbrillo",
-    "libchrome",
-  ]
-  public_pkg_deps = [ "libmojo" ]
-}
-
-pkg_config("test_pkg_deps") {
-  pkg_deps = [
-    "libchrome",
-    "libchrome-test",
-    "libmojo",
-  ]
 }
 
 if (use.test || use.fuzzer) {
-  source_set("test_util") {
+  source_set("test_support") {
     sources = [ "file_test_utils.cc" ]
-    configs += [ ":test_pkg_deps" ]
     public_configs = [
       ":libdiagnostics_base_config",
       "//common-mk:test",
     ]
+    public_pkg_deps = [ "libchrome" ]
+    pkg_deps = [ "libbrillo" ]
+    public_deps = [ ":libdiagnostics_base" ]
   }
-}
-
-pkg_config("healthd_testrunner_pkg_deps") {
-  pkg_deps = [
-    "libchrome",
-    "libmojo",
-  ]
 }
 
 if (use.test) {
   source_set("healthd_testrunner") {
     sources = [ "healthd_testrunner.cc" ]
-    configs += [ ":healthd_testrunner_pkg_deps" ]
     public_configs = [ "//common-mk:test" ]
+    pkg_deps = [ "libmojo" ]
     public_deps = [ "//common-mk/testrunner:testrunner" ]
   }
-}
 
-if (use.test) {
   source_set("test") {
     sources = [
       "file_test_utils_test.cc",
@@ -80,8 +67,14 @@ if (use.test) {
       "mojo_utils_test.cc",
       "path_literal_test.cc",
     ]
-    configs += [ ":test_pkg_deps" ]
-    deps = [ ":libdiagnostics_base" ]
-    public_deps = [ ":healthd_testrunner" ]
+    pkg_deps = [
+      "libchrome",
+      "libmojo",
+    ]
+    deps = [
+      ":healthd_testrunner",
+      ":libdiagnostics_base",
+      ":test_support",
+    ]
   }
 }
