ml: Gate language packs on USE_DLC
This is not much different to just enabling language packs everywhere,
since USE_DLC is true everywhere that ML Service. But conceptually it
makes sense to gate this way.

BUG=b:319365405
TEST=CQ only

Change-Id: I87b8e93a0f17dc56858454044580d6665833cd32
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347530
Commit-Queue: Andrew Moylan <amoylan@chromium.org>
Commit-Queue: Michael Cui <mlcui@google.com>
Auto-Submit: Andrew Moylan <amoylan@chromium.org>
Reviewed-by: Michael Cui <mlcui@google.com>
Tested-by: Andrew Moylan <amoylan@chromium.org>

--- a/ml/BUILD.gn
+++ b/ml/BUILD.gn
@@ -183,6 +183,7 @@ static_library("ml_common") {
   all_dependent_configs = [ ":ml_common_pkg_deps" ]
   defines = [
     "TC3_VOCAB_ANNOTATOR_IMPL",
+    "USE_DLC=${use.dlc}",
     "USE_INPUT_DEVICES_SPI_HEATMAP=${use.input_devices_spi_heatmap}",
     "USE_ONDEVICE_DOCUMENT_SCANNER=${use.ondevice_document_scanner}",
     "USE_ONDEVICE_DOCUMENT_SCANNER_DLC=${use.ondevice_document_scanner_dlc}",
@@ -321,6 +322,7 @@ if (use.test) {
     configs += [ "//common-mk:test" ]
     include_dirs = [ "${sysroot}/usr/include/tensorflow" ]
     defines = [
+      "USE_DLC=${use.dlc}",
       "USE_ONDEVICE_DOCUMENT_SCANNER=${use.ondevice_document_scanner}",
       "USE_ONDEVICE_DOCUMENT_SCANNER_DLC=${use.ondevice_document_scanner_dlc}",
       "USE_ONDEVICE_GRAMMAR=${use.ondevice_grammar}",
@@ -391,6 +393,7 @@ if (use.fuzzer) {
 
     # Enables handwriting for all boards in fuzzer.
     defines = [
+      "USE_DLC=true",
       "USE_ONDEVICE_HANDWRITING=true",
       "USE_ONDEVICE_HANDWRITING_DLC=true",
     ]
