camera: fix gpu/gl_loader/BUILD.gn
BUG=b:277798516
TEST=emerge-rex cros-camera-gl-loader

Change-Id: I8a69d02f56809e3c3abb2ee47d4a69dfe67419d1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5349639
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Auto-Submit: Romaric Jodin <rjodin@chromium.org>
Tested-by: Romaric Jodin <rjodin@chromium.org>
Commit-Queue: Romaric Jodin <rjodin@chromium.org>

--- a/camera/gpu/gl_loader/BUILD.gn
+++ b/camera/gpu/gl_loader/BUILD.gn
@@ -12,7 +12,7 @@ group("all") {
 shared_library("libcamera_egl_loader") {
   output_name = "libcamera_egl_loader"
   sources = [ "//camera/gpu/gl_loader/egl_loader.cc" ]
-  public_configs = [ "//camera/build:cros_camera_common" ]
+  configs += [ "//camera/build:cros_camera_common" ]
   libs = [ "dl" ]
   install_path = "lib"
 }
@@ -20,7 +20,7 @@ shared_library("libcamera_egl_loader") {
 shared_library("libcamera_gles_loader") {
   output_name = "libcamera_gles_loader"
   sources = [ "//camera/gpu/gl_loader/gles_loader.cc" ]
-  public_configs = [ "//camera/build:cros_camera_common" ]
+  configs += [ "//camera/build:cros_camera_common" ]
   libs = [ "dl" ]
   install_path = "lib"
 }
