flex_hwis: Rename flex_disk_metrics to flex_device_metrics
This is a precursor to adding a CPU UMA. This is mostly a mechanical
renaming, except for README.md which has been edited.

BUG=b:307936467
TEST=cros_workon start flex_hwis
TEST=FEATURES=test emerge-reven chromeos-base/flex_hwis
TEST=cros build-image test, run the image
TEST=Verify partition histograms are in chrome://histograms

Change-Id: If1c9329908f3f07cce4111e99e08f7891dc4b935
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5350324
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Ting-Hao Lin <tinghaolin@google.com>
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>

--- a/flex_hwis/flex_device_metrics/BUILD.gn
+++ b/flex_hwis/flex_device_metrics/BUILD.gn
@@ -5,9 +5,9 @@
 import("//common-mk/pkg_config.gni")
 
 group("all") {
-  deps = [ ":flex_disk_metrics" ]
+  deps = [ ":flex_device_metrics" ]
   if (use.test) {
-    deps += [ ":flex_disk_metrics_test" ]
+    deps += [ ":flex_device_metrics_test" ]
   }
 }
 
@@ -19,17 +19,17 @@ pkg_config("target_defaults") {
   ]
 }
 
-source_set("flex_disk_metrics_source_set") {
-  sources = [ "flex_disk_metrics.cc" ]
+source_set("flex_device_metrics_source_set") {
+  sources = [ "flex_device_metrics.cc" ]
   configs += [ ":target_defaults" ]
 }
 
-executable("flex_disk_metrics") {
-  sources = [ "flex_disk_metrics_main.cc" ]
+executable("flex_device_metrics") {
+  sources = [ "flex_device_metrics_main.cc" ]
   install_path = "bin"
   configs += [ ":target_defaults" ]
   libs = [ "rootdev" ]
-  deps = [ ":flex_disk_metrics_source_set" ]
+  deps = [ ":flex_device_metrics_source_set" ]
 }
 
 if (use.test) {
@@ -37,15 +37,15 @@ if (use.test) {
     pkg_deps = [ "libchrome-test" ]
   }
 
-  executable("flex_disk_metrics_test") {
-    sources = [ "flex_disk_metrics_test.cc" ]
+  executable("flex_device_metrics_test") {
+    sources = [ "flex_device_metrics_test.cc" ]
     configs += [
       "//common-mk:test",
       ":test_pkg_deps",
       ":target_defaults",
     ]
     deps = [
-      ":flex_disk_metrics_source_set",
+      ":flex_device_metrics_source_set",
       "//common-mk/testrunner",
     ]
     run_test = true
