--- a/flex_hwis/init/upstart/flex_device_metrics.conf
+++ b/flex_hwis/init/upstart/flex_device_metrics.conf
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-description     "Run flex_disk_metrics on ChromeOS Flex devices"
+description     "Run flex_device_metrics on ChromeOS Flex devices"
 author          "chromium-os-dev@chromium.org"
 
 start on started system-services
@@ -10,5 +10,5 @@ start on started system-services
 oom score -100
 task
 
-exec minijail0 --config /usr/share/minijail/flex_disk_metrics.conf -- \
-  /usr/bin/flex_disk_metrics
+exec minijail0 --config /usr/share/minijail/flex_device_metrics.conf -- \
+  /usr/bin/flex_device_metrics
