libchromeos-rs: add open_safely and OpenSafelyOptions
open_safely() is a more or less direct port of the libbrillo
OpenSafely() function, and OpenSafelyOptions is a drop-in replacement
for the standard Rust OpenOptions builder. This will allow ChromeOS Rust
programs to open files while ensuring there are no symlinks in the path
without TOCTTOU problems.

BUG=b:5345852
TEST=FEATURES=test emerge-$BOARD libchromeos-rs

Change-Id: I990eb767d13b5f98b0a77382278c366017225db6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5362355
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Daniel Verkamp <dverkamp@chromium.org>

--- a/libchromeos-rs/Cargo.toml
+++ b/libchromeos-rs/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.114", features = ["derive"] }
 stderrlog = "0.5.0"
 syslog = "6.0.1"
 system_api = { path = "../system_api", optional = true } # provided by ebuild
+tempfile = "3"
 thiserror = "1.0.20"
 vboot_reference-sys = { path = "../../platform/vboot_reference/rust/vboot_reference-sys", optional = true } # provided by ebuild
 zerocopy = "0.6.1"
