fbpreprocessor: Clear FWDump buffer between sessions
Call D-Bus method |org.chromium.debugd.ClearFirmwareDumpBuffer| to clear
low-level debug buffer between user sessions. The semantics for login
and logout are different:
- Login: login initialization tasks should be performed after the
  successful return of |ClearFirmwareDumpBuffer|.
- Logout: make a best-effort call to |ClearFirmwareDumpBuffer|.

BUG=b:308219584
TEST=cros workon --board ${BOARD} start debugd debugd-client \
  chromeos-base/system_api fbpreprocessord
TEST=cros_sdk emerge-${BOARD} debugd debugd-client \
  chromeos-base/system_api fbpreprocessord \
  && cros deploy localhost:2300 debugd  debugd-client \
  chromeos-base/system_api fbpreprocessord
TEST=reboot and login
TEST=Find in /var/log/fbpreprocessord/fbpreprocessord.log that
|OnClearFWDumpBufferSuccess| is called after "user login" logs,
which means the D-Bus method |ClearFWDumpBuffer| is invoked
successfully.

Change-Id: I1a8ae48169582b6130b84bdab1405339768341f5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5160611
Commit-Queue: Yichen Yu <yichenyu@chromium.org>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Tested-by: Yichen Yu <yichenyu@chromium.org>
Auto-Submit: Yichen Yu <yichenyu@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -27,6 +27,7 @@ pkg_config("target_defaults") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
+    "libdebugd-client",
     "libfeatures",
     "libsession_manager-client",
     "protobuf",
