shill: wifi: Add P2PPeer class for peer related properties
BUG=b:325323195
TEST=FEATURES=test emerge-{BOARD} shill

Change-Id: Ic754a4ddffc6155ababa991ff4ad67e35c00766f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5355498
Reviewed-by: Matthew Wang <matthewmwang@chromium.org>
Tested-by: Jintao Lin <jintaolin@chromium.org>
Commit-Queue: Jintao Lin <jintaolin@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -396,6 +396,7 @@ static_library("libshill") {
     "wifi/nl80211_message.cc",
     "wifi/p2p_device.cc",
     "wifi/p2p_manager.cc",
+    "wifi/p2p_peer.cc",
     "wifi/p2p_service.cc",
     "wifi/passpoint_credentials.cc",
     "wifi/wake_on_wifi.cc",
@@ -886,6 +887,7 @@ if (use.test) {
       "wifi/nl80211_message_test.cc",
       "wifi/p2p_device_test.cc",
       "wifi/p2p_manager_test.cc",
+      "wifi/p2p_peer_test.cc",
       "wifi/p2p_service_test.cc",
       "wifi/passpoint_credentials_test.cc",
       "wifi/wake_on_wifi_test.cc",
