crosier-chrome: add crosier cq tags to few selected Crosier tests.
BUG=b:294097177
TEST=local

Change-Id: Ifa7bfb4e9494a2d3c1c6e991f8860428198ee1aa
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347532
Auto-Submit: Alex Bergman <abergman@google.com>
Reviewed-by: Seewai Fu <seewaifu@google.com>
Reviewed-by: Derek Beckett <dbeckett@chromium.org>
Commit-Queue: Alex Bergman <abergman@google.com>
Tested-by: Alex Bergman <abergman@google.com>
Commit-Queue: Derek Beckett <dbeckett@chromium.org>

--- a/crosier-chrome/test_metadata/bluetooth_integration_test.yaml
+++ b/crosier-chrome/test_metadata/bluetooth_integration_test.yaml
@@ -16,7 +16,7 @@ criteria: |
   Crosier Bluetooth test.
 cases:
   - id: "ToggleBluetoothFromQuickSettings"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "ToggleBluetoothFromOsSettings"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
