--- a/crosier-chrome/test_metadata/login_integration_test.yaml
+++ b/crosier-chrome/test_metadata/login_integration_test.yaml
@@ -17,5 +17,5 @@ criteria: |
   same as Tast's default login.
 cases:
   - id: "TestLogin"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
