--- a/crosier-chrome/test_metadata/external_metrics_integration_test.yaml
+++ b/crosier-chrome/test_metadata/external_metrics_integration_test.yaml
@@ -17,5 +17,5 @@ criteria: |
   Ash's importer of these metrics.
 cases:
   - id: "SyncHistograms"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
