lorgnette: Add minijail configs to enable non-rootfs DLC
We need to add minijail flags to recursively mount the DLC paths so
drivers installed there are accessible from lorgnette's minjail
sandbox.

Add DLC mountpaths to lorgnette.

BUG=b:270941137
TEST=emerge-dedede, deploy, then test on DLC ebuild

Change-Id: Ic92c1ae445e1e250e1deb68b1015ec519ecf8eeb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5354621
Commit-Queue: Aaron Massey <aaronmassey@google.com>
Reviewed-by: Benjamin Gordon <bmgordon@chromium.org>
Tested-by: Aaron Massey <aaronmassey@google.com>

--- a/lorgnette/minijail/lorgnette.conf
+++ b/lorgnette/minijail/lorgnette.conf
@@ -20,6 +20,8 @@ bind-mount = /dev/log
 bind-mount = /dev/bus/usb
 mount = run,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 bind-mount = /run/dbus
+# Need to recursively mount DLC paths to access installed DLCs.
+mount = /run/imageloader,/run/imageloader,none,MS_BIND|MS_REC
 bind-mount = /run/ippusb,/run/ippusb,1
 bind-mount = /run/lorgnette,/run/lorgnette,1
 mount = var,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
