camera: Enable single-frame upsampling in FramingSM
Enable single-frame upsampling for zoom still captures.

BUG=b:316252303
TEST=Manually test the still capture in zooming mode

Change-Id: Id71186a182805be36d0756cb5758c82b405fda84
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5347533
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Juliana Chang <julianachang@chromium.org>
Tested-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -321,6 +321,7 @@ source_set("stream_manipulator") {
 
   deps = [
     ":jpeg",
+    "//camera/features/super_resolution",
     "//camera/gpu:gpu_resources",
   ]
   if (use.camera_feature_auto_framing) {
