tpm_manager: Add freezer cgroups and write PID
PID is a required part to operate freezers. This CL also adds PID to
cgroup.proc once the process has started.

BUG=b:301136700
TEST=Once the process is running, check cgroup.proc

Change-Id: Iaed25a596bef7a70f5d1d7a7d007b4f4966928b4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5351600
Auto-Submit: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Betul Soysal <betuls@google.com>
Commit-Queue: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Hardik Goyal <hardikgoyal@chromium.org>

--- a/tpm_manager/server/tpm_managerd.conf
+++ b/tpm_manager/server/tpm_managerd.conf
@@ -13,6 +13,10 @@ oom score -100
 
 tmpfiles /usr/lib/tmpfiles.d/tpm_manager.conf
 
+# The key eviction feature would be enabled if this variable is true.
+env KEY_EVICTION=false
+env TPM_MANAGER_FREEZER_CGROUP_DIR=/sys/fs/cgroup/freezer/tpm_manager
+
 pre-start script
   # Migration errors are non-fatal for the daemon startup.
   local_data_migration || true
@@ -52,6 +56,15 @@ script
   -- /usr/sbin/tpm_managerd
 end script
 
-# Wait for daemon to claim its D-Bus name.
-post-start exec minijail0 -u tpm_manager -G \
+post-start script
+  if [ "${KEY_EVICTION}" = true ]; then
+  /usr/bin/systemd-tmpfiles --create --remove --clean \
+     /usr/lib/tmpfiles.d/tpm_manager_freezer.conf
+    echo $(status | cut -f 4 -d ' ') > \
+      "${TPM_MANAGER_FREEZER_CGROUP_DIR}/cgroup.procs"
+  fi
+
+  # Wait for daemon to claim its D-Bus name.
+  exec minijail0 -u tpm_manager -G \
     /usr/bin/gdbus wait --system --timeout 15 org.chromium.TpmManager
+end script
