--- a/tpm_manager/BUILD.gn
+++ b/tpm_manager/BUILD.gn
@@ -264,6 +264,9 @@ install_config("install_minijail_conf") {
 }
 
 install_config("install_tmpfiles_config") {
-  sources = [ "server/tmpfiles.d/tpm_manager.conf" ]
+  sources = [
+    "server/tmpfiles.d/tpm_manager.conf",
+    "server/tmpfiles.d/tpm_manager_freezer.conf",
+  ]
   install_path = "tmpfilesd"
 }
