crash: Watch for browser hangs in anomaly detector
The LivenessChecker mechanism implemented in session_manager is used to
monitor browser responsiveness. The browser is reset after being
unresponsive for 60s, but shorter hangs are also detected and logged.
Extend anomaly_detector to detect those and collect some logs when they
happen. The weight of each event is inversely proportional to the length
of the hang.

BUG=b:328017510
TEST=Hang the browser for some time and verify that a crash is
generated.

Change-Id: Id411cb3f0f8691e1bf97bbbfb3583f7d34b6e4df
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5352588
Tested-by: Kornel Dulęba <korneld@google.com>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Marek Maślanka <mmaslanka@google.com>
Commit-Queue: Kornel Dulęba <korneld@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -77,6 +77,26 @@ chrome=\
     echo EOF; \
   done;
 
+# Special config for short (<60s) browser hangs. After 60s session_manager will
+# reboot the browser, triggering a "regular" chrome crash. This non-fatal crash
+# is triggered once chrome becomes responsive again, after a hang that lasts at
+# least 6s.
+browser_hang=\
+  for f in /var/log/chrome/chrome \
+    $(ls -1rt /home/chronos/u-*/log/chrome 2>/dev/null | tail -1); do \
+    echo "===$f (tail)==="; \
+    tail -100 $f; \
+    echo EOF; \
+    echo; \
+  done; \
+  echo "===vmlog.LATEST (tail)==="; \
+  tail -30 /var/log/vmlog/vmlog.LATEST; \
+  echo EOF; \
+  echo ; \
+  echo "===session_manager (tail)==="; \
+  croslog --since=-60 --identifier="session_manager" | tail -100; \
+  echo EOF
+
 # Grab `/var/log/lacros/lacros.log` and `/home/chronos/user/lacros/lacros.log`.
 # Additionally, grab the most recent Ash log, for additional context.
 lacros_chrome=\
