diagnostics: Update the usage of executor mojom
1. Remove wrong import of executor.h.
2. Move the wireless interface check function to /executor/utils.

BUG=None
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I707d2dfbb9a91f3df92215f10aea3891489f5967
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5353106
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/executor/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/executor/utils/BUILD.gn
@@ -11,6 +11,7 @@ pkg_config("pkg_deps") {
     "libchrome",
     "libdlcservice-client",
     "libmojo",
+    "re2",
     "vboot_host",
   ]
 }
@@ -20,6 +21,7 @@ source_set("utils") {
     "delegate_process.cc",
     "dlc_manager.cc",
     "file.cc",
+    "network_utils.cc",
     "process_control.cc",
     "sandboxed_process.cc",
     "scoped_process_control.cc",
@@ -48,6 +50,7 @@ if (use.test) {
       "dlc_manager_test.cc",
       "fake_process_control.cc",
       "file_test.cc",
+      "network_utils_test.cc",
       "sandboxed_process_test.cc",
       "scoped_process_control_test.cc",
     ]
