--- a/diagnostics/cros_healthd/routines/fan/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/fan/BUILD.gn
@@ -25,6 +25,7 @@ if (use.test) {
       ":fan",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
     ]
