diagnostics: Refactor BUILD.gn for executor
1. Update to use correct deps.
2. Order every build target by sources, configs and deps.
3. Build fake_process_control in another test_support target.

Also add missing dep in /system/BUILD.gn to fix build error in CQ.

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ib53c791f38439f89aa008134ca23e6ab2e89c650
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5348637
Tested-by: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -49,7 +49,7 @@ executable("cros_healthd") {
   assert_no_deps = [ "//diagnostics/cros_healthd/delegate/*" ]
   deps = [
     ":libcros_healthd",
-    "//diagnostics/cros_healthd/executor:libcros_healthd_executor",
+    "//diagnostics/cros_healthd/executor",
     "//diagnostics/cros_healthd/minijail",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
   ]
