--- a/diagnostics/cros_healthd/routines/bluetooth/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/bluetooth/BUILD.gn
@@ -54,6 +54,7 @@ if (use.test) {
       ":bluetooth",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/cros_healthd/executor/utils:test_support",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
     ]
