--- a/diagnostics/cros_healthd/routines/storage/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/storage/BUILD.gn
@@ -49,6 +49,7 @@ if (use.test) {
       ":storage",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/cros_healthd/executor/utils:test_support",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
     ]
