--- a/diagnostics/cros_healthd/system/BUILD.gn
+++ b/diagnostics/cros_healthd/system/BUILD.gn
@@ -42,7 +42,8 @@ source_set("libcros_healthd_system") {
   deps = [
     ":libcros_healthd_system_pci_util",
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/executor:libcros_healthd_executor",
+    "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
+    "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
     "//diagnostics/dbus_bindings",
     "//diagnostics/mojom/external:libcros_healthd_internal",
   ]
