lorgnette: hook up initial DLC configuration
BUG=b:328303048
TEST=lorgnette_cli discover; dlcservice_util --list

Change-Id: Ib79a71784be7d3cb8b848127fee640a327d1e128
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5352157
Tested-by: Paul Moy <pmoy@chromium.org>
Reviewed-by: Aaron Massey <aaronmassey@google.com>
Reviewed-by: Benjamin Gordon <bmgordon@chromium.org>
Commit-Queue: Paul Moy <pmoy@chromium.org>

--- a/lorgnette/dbus_permissions/org.chromium.lorgnette.conf
+++ b/lorgnette/dbus_permissions/org.chromium.lorgnette.conf
@@ -66,6 +66,10 @@
              send_interface="org.chromium.lorgnette.Manager"
              send_member="ListScanners"/>
     </policy>
+    <policy user="dlcservice">
+      <allow send_destination="org.chromium.lorgnette"
+             send_type="signal"/>
+    </policy>
     <policy user="printscanmgr">
       <allow send_destination="org.chromium.lorgnette"
              send_interface="org.chromium.lorgnette.Manager"
