cryptohome: Add LockFactorUntilReboot API
LockFactorUntilReboot API creates a flag file that Cryptohome
will later recognize and won't allow the AuthFactor for
authentication. Currently this is only implemented for CryptohomeRecovery auth factor type. A flag file is created under /run/cryptohome,
which will be gone during a reboot.

BUG=b:324076479
TEST=cryptohome --action=lock_factor_until_reboot \
--recovery_mediator_pub_key
TEST=tast run cryptohome.Recovery fails with code 59

Change-Id: I6b38e69fae820d639b566c7e9eced2b70030f7b8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5354932
Reviewed-by: John Admanski <jadmanski@chromium.org>
Commit-Queue: Betul Soysal <betuls@google.com>
Tested-by: Betul Soysal <betuls@google.com>
Reviewed-by: Howard Yang <hcyang@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -120,6 +120,10 @@
            send_interface="org.chromium.UserDataAuthInterface"
            send_member="GetRecoverableKeyStores"/>
     <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
+           send_member="LockFactorUntilReboot"/>
+
+    <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.CryptohomePkcs11Interface"
            send_member="Pkcs11IsTpmTokenReady"/>
     <allow send_destination="org.chromium.UserDataAuth"
