vm_tools: configure crosvm's fixed-blob-mapping launch arg
Can configured per ChromeOS board as needed.

BUG=b:327548097, b:246334944
TEST=(chroot) USE=-crosvm-fixed-blob-mapping emerge vm_host_tools && cros deploy vm_host_tools
TEST=(DUT) cat /proc/$(pgrep crosvm)/cmdline | tr '\0' '\n' | grep 'fixed-blob-mapping=false'

Change-Id: I9525532854ba3b3971b4f1ca773479e4c24b88d4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5355501
Tested-by: Ryan Neph <ryanneph@google.com>
Reviewed-by: Rob Clark <robdclark@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Ryan Neph <ryanneph@google.com>
Reviewed-by: David Munro <davidmunro@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>

--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -54,6 +54,7 @@ config("host_target_defaults") {
   configs = [ ":host_target_defaults_pkgs" ]
   defines = [
     "USE_PMEM_DEVICE_FOR_ROOTFS=${use.amd64}",
+    "USE_CROSVM_FIXED_BLOB_MAPPING=${use.crosvm_fixed_blob_mapping}",
     "USE_CROSVM_VIRTIO_VIDEO=${use.crosvm_virtio_video}",
     "USE_CROSVM_VULKAN=${use.vulkan}",
     "USE_CROSVM_VENUS_GWP_ASAN=${use.venus_gwp_asan}",
