diagnostics: Refactor BUILD.gn for privacy screen
Also create a utils traget in routines/BUILD.gn to avoid dependency
cycle.

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: If084b68716baa601dc02d16f20d18e87b64500e6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5353555
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -12,17 +12,9 @@ pkg_config("routines_pkg_config") {
   ]
 }
 
-source_set("routines") {
-  sources = [
-    "base_routine_control.cc",
-    "diag_routine_with_status.cc",
-    "routine_adapter.cc",
-    "routine_service.cc",
-    "simple_routine.cc",
-  ]
-  configs += [ ":routines_pkg_config" ]
+group("routines") {
   deps = [
-    "//diagnostics/base",
+    ":utils",
     "//diagnostics/cros_healthd/routines/android_network",
     "//diagnostics/cros_healthd/routines/audio",
     "//diagnostics/cros_healthd/routines/battery_and_power",
@@ -37,8 +29,22 @@ source_set("routines") {
     "//diagnostics/cros_healthd/routines/privacy_screen",
     "//diagnostics/cros_healthd/routines/sensor",
     "//diagnostics/cros_healthd/routines/storage",
+  ]
+}
+
+source_set("utils") {
+  sources = [
+    "base_routine_control.cc",
+    "diag_routine_with_status.cc",
+    "routine_adapter.cc",
+    "routine_service.cc",
+    "simple_routine.cc",
+  ]
+  configs += [ ":routines_pkg_config" ]
+  public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
+  deps = [
+    "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
-    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
 
