--- a/diagnostics/cros_healthd/routines/bluetooth/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/bluetooth/BUILD.gn
@@ -26,6 +26,7 @@ source_set("bluetooth") {
     "floss/bluetooth_scanning.cc",
   ]
   configs += [ ":bluetooth_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
