--- a/diagnostics/cros_healthd/routines/camera/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/camera/BUILD.gn
@@ -13,6 +13,7 @@ pkg_config("camera_pkg_config") {
 source_set("camera") {
   sources = [ "camera_availability.cc" ]
   configs += [ ":camera_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
