--- a/diagnostics/cros_healthd/routines/fan/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/fan/BUILD.gn
@@ -9,6 +9,7 @@ pkg_config("fan_pkg_config") {
 source_set("fan") {
   sources = [ "fan.cc" ]
   configs += [ ":fan_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
