--- a/diagnostics/cros_healthd/routines/fingerprint/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/fingerprint/BUILD.gn
@@ -15,6 +15,7 @@ source_set("fingerprint") {
     "fingerprint_alive.cc",
   ]
   configs += [ ":fingerprint_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
