--- a/diagnostics/cros_healthd/routines/hardware_button/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/hardware_button/BUILD.gn
@@ -15,6 +15,7 @@ source_set("hardware_button") {
     "volume_button.cc",
   ]
   configs += [ ":hardware_button_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
