--- a/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
@@ -20,6 +20,7 @@ source_set("memory_and_cpu") {
     "urandom_v2.cc",
   ]
   configs += [ ":memory_and_cpu_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
