--- a/diagnostics/cros_healthd/routines/network/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/network/BUILD.gn
@@ -22,6 +22,7 @@ source_set("network") {
     "video_conferencing.cc",
   ]
   configs += [ ":network_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
