--- a/diagnostics/cros_healthd/routines/sensor/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/sensor/BUILD.gn
@@ -15,6 +15,7 @@ source_set("sensor") {
     "sensor_existence_checker.cc",
   ]
   configs += [ ":sensor_pkg_config" ]
+  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system:libcros_healthd_system",
