--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -37,6 +37,7 @@ cros_license_check:
   --exclude_regex=^vm_tools/reference_vm/data/usr/src
   --exclude_regex=verity/blake2b/
   --exclude_regex=soul/gravedigger/tests/test_log_file
+  --exclude_regex=soul/reaper/tests/config_files/.*
 
 stray_whitespace_check:
   --exclude_regex=/testdata/
