--- a/soul/reaper/Cargo.toml
+++ b/soul/reaper/Cargo.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 edition = "2021"
 authors = ["The ChromiumOS Authors"]
 
+[features]
+chromeos = []
+
 [dependencies]
+anyhow = "1.0"
+env_logger = "0.9"
+log = "0.4"
+serde = { version = "1.0", features = [ "derive" ] }
+toml = "0.5"
