arc: Enable provisioning of Device Key in keymint
This enables libarc-attestation to start preparing the attestation
credentials when arc-keymint is launched.

BUG=b:327036688
TEST=emerge-$BOARD arc-keymint

Change-Id: Iffa4d3f6400f298bbaf7edb1ce1e27df9c3d8817
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5354798
Reviewed-by: Vaibhav Raheja <vraheja@chromium.org>
Reviewed-by: Yao Li <yaohuali@google.com>
Commit-Queue: John L Chen <zuan@chromium.org>
Tested-by: John L Chen <zuan@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -229,6 +229,7 @@ shared_library("libarckeymint_context") {
     "//common-mk:visibility_default",
     ":boringssl_config",
   ]
+  libs = [ "arc-attestation" ]
 
   # NOSORT
   pkg_deps = [
