cryptohome: new UDA api MigrateLegacyFingerprints
Wire up AuthSession::MigrateLegacyFingerprints with
UDA service API.

BUG=b:327040018
TEST=new unit tests; FEATURES=test emerge-$B cryptohome

Change-Id: I11710162b4daede6198a40e11da0b43969356290
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5357013
Tested-by: Zi Lin <lziest@google.com>
Reviewed-by: John Admanski <jadmanski@chromium.org>
Commit-Queue: Zi Lin <lziest@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -122,6 +122,9 @@
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
            send_member="LockFactorUntilReboot"/>
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
+           send_member="MigrateLegacyFingerprints"/>
 
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.CryptohomePkcs11Interface"
