mini_udisks: Add Rust dependencies
BUG=b:328780545
TEST=cros_workon start mini_udisks
TEST=emerge-reven mini_udisks

Cq-Depend: chromium:5352773,chromium:5356639
Change-Id: I9d9cb97b3f97941c1641b727473c9055493f2a5f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5353430
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>

--- a/mini_udisks/Cargo.toml
+++ b/mini_udisks/Cargo.toml
@@ -3,3 +3,10 @@ name = "mini_udisks"
 version = "1.0.0"
 authors = ["The ChromiumOS Authors"]
 edition = "2021"
+
+[dependencies]
+anyhow = "1.0"
+dbus = "0.9"
+dbus-crossroads = "0.5"
+libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
+log = "0.4"
